--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <div class="logo-icon">
-                    <!-- 使用图片logo -->
+                    <!-- Logo image -->
                     <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <!-- 功能按钮区域 -->
+        <!-- Features Button Section -->
         <section class="features-section">
             <div class="section-container">
                 <div class="features-container">
@@ -153,7 +153,7 @@
         </section>
     </main>
 
-    <!-- 页脚 -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="section-container">
             <div class="footer-content">
