apply backend to frontend and add two buttoms on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,15 +76,15 @@
                     No complex apps, just simple tools to help you eat well and age gracefully.
                 </p>
                 <div class="hero-buttons">
-                    <button class="btn btn-primary">
+                    <a class="btn btn-primary" href="explore-recipes.html">
                         <i class="fas fa-heart"></i>
                         <span>Start Exploring Recipes</span>
                         <i class="fas fa-arrow-right"></i>
-                    </button>
-                    <button class="btn btn-secondary">
+                    </a>
+                    <a class="btn btn-secondary" href="nutrition-dashboard.html">
                         <i class="fas fa-chart-bar"></i>
                         <span>Track Your Nutrition</span>
-                    </button>
+                    </a>
                 </div>
             </div>
         </section>
