--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -208,104 +208,11 @@
                         <h2><i class="fas fa-bullseye"></i> Today's Goals</h2>
                     </div>
                     <div class="goals-list">
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
+                        <section>
+                            <div class="section-container">
+                                <div id="nutrition-results"></div>
                             </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Calories</span>
-                                <span class="goal-progress">320 / 2000</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 16%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
-                            </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Protein</span>
-                                <span class="goal-progress">12 / 80 g</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 15%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
-                            </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Carbs</span>
-                                <span class="goal-progress">45 / 250 g</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 18%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
-                            </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Fat</span>
-                                <span class="goal-progress">8 / 70 g</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 11%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
-                            </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Fiber</span>
-                                <span class="goal-progress">8 / 30 g</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 27%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                        <div class="goal-item">
-                            <div class="goal-icon">
-                                <i class="fas fa-exclamation-triangle"></i>
-                            </div>
-                            <div class="goal-info">
-                                <span class="goal-name">Water</span>
-                                <span class="goal-progress">2 / 8 glasses</span>
-                            </div>
-                            <div class="goal-progress-bar">
-                                <div class="progress-bar">
-                                    <div class="progress-fill" style="width: 25%"></div>
-                                </div>
-                                <span class="progress-text">Need more</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Today's Health Tip Section -->
-        <section class="health-tip-section">
-            <div class="section-container">
+                        </section>
                 <div class="health-tip-container">
                     <div class="health-tip-header">
                         <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
