--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <div class="logo-icon">
-                    <!-- 使用图片logo -->
+                    <!-- Logo image -->
                     <img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
                 </div>
                 <div class="logo-text">
