--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -211,6 +211,7 @@
                         <section>
                             <div class="section-container">
                                 <div id="nutrition-results"></div>
+                                <div id="dashboard-nutrition"></div>
                             </div>
                         </section>
                 <div class="health-tip-container">
