filter and dashboard enhancements

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -95,8 +95,11 @@
                                 <option value="breakfast">Breakfast</option>
                                 <option value="lunch">Lunch</option>
                                 <option value="dinner">Dinner</option>
-                                <option value="snacks">Snacks</option>
-                                <option value="desserts">Desserts</option>
+                                <option value="dessert">Dessert</option>
+                                <option value="soup">Soup</option>
+                                <option value="salad">Salad</option>
+                                <option value="drink">Drink</option>
+                                <option value="snack">Snack</option>
                             </select>
                         </div>
                         
@@ -106,9 +109,10 @@
                                 <option value="all">All</option>
                                 <option value="vegetarian">Vegetarian</option>
                                 <option value="vegan">Vegan</option>
-                                <option value="gluten-free">Gluten-Free</option>
-                                <option value="low-sodium">Low-Sodium</option>
-                                <option value="heart-healthy">Heart-Healthy</option>
+                                <option value="dairy_free">Dairy-Free</option>
+                                <option value="gluten_free">Gluten-Free</option>
+                                <option value="nut_free">Nut-Free</option>
+                                <option value="low_sugar">Low-Sugar</option>
                             </select>
                         </div>
                     </div>
