--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -84,8 +84,8 @@
                             <span>Keep logging meals to reach your goals</span>
                         </div>
                         <div class="progress-info">
-                            <span class="progress-text">Overall Progress: 21% of daily goals</span>
-                            <span class="progress-percentage">21%</span>
+                            <span class="progress-text">Overall Progress: <span id="overall-progress-text">0%</span> of daily goals</span>
+                            <span class="progress-percentage" id="overall-progress">0%</span>
                         </div>
                     </div>
                     <div class="progress-bar-container">
@@ -112,9 +112,9 @@
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value">320</span>
+                            <span class="current-value" id="calories-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value">2000</span>
+                            <span class="goal-value" id="calories-goal">2000</span>
                             <span class="unit">kcal</span>
                         </div>
                         <p class="card-description">Energy for daily activities</p>
@@ -136,9 +136,9 @@
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value">12</span>
+                            <span class="current-value" id="protein-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value">80</span>
+                            <span class="goal-value" id="protein-goal">80</span>
                             <span class="unit">g</span>
                         </div>
                         <p class="card-description">Muscle maintenance & repair</p>
@@ -160,9 +160,9 @@
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value">8</span>
+                            <span class="current-value" id="fiber-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value">30</span>
+                            <span class="goal-value" id="fiber-goal">30</span>
                             <span class="unit">g</span>
                         </div>
                         <p class="card-description">Digestive health support</p>
@@ -184,9 +184,9 @@
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value">2</span>
+                            <span class="current-value" id="water-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value">8</span>
+                            <span class="goal-value" id="water-goal">8</span>
                             <span class="unit">glasses</span>
                         </div>
                         <p class="card-description">Hydration & body function</p>
