--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -31,11 +31,11 @@
                     <i class="fas fa-search"></i>
                     <span>Explore Recipes</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="daily-recommendations.html" class="nav-link">
                     <i class="fas fa-heart"></i>
                     <span>Daily Recommendations</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="meal-planning.html" class="nav-link">
                     <i class="fas fa-calendar"></i>
                     <span>Meal Planning</span>
                 </a>
@@ -43,7 +43,7 @@
                     <i class="fas fa-chart-bar"></i>
                     <span>Nutrition Dashboard</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="shopping-list.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
                     <span>Shopping List</span>
                 </a>
