--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
             </div>
             
             <div class="nav-links">
-                <a href="#" class="nav-link active">
+                <a href="index.html" class="nav-link active">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
@@ -31,11 +31,11 @@
                     <i class="fas fa-search"></i>
                     <span>Explore Recipes</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="daily-recommendations.html" class="nav-link">
                     <i class="fas fa-heart"></i>
                     <span>Daily Recommendations</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="meal-planning.html" class="nav-link">
                     <i class="fas fa-calendar"></i>
                     <span>Meal Planning</span>
                 </a>
@@ -43,7 +43,7 @@
                     <i class="fas fa-chart-bar"></i>
                     <span>Nutrition Dashboard</span>
                 </a>
-                <a href="#" class="nav-link">
+                <a href="shopping-list.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
                     <span>Shopping List</span>
                 </a>
@@ -124,30 +124,30 @@
         <section class="features-section">
             <div class="section-container">
                 <div class="features-container">
-                    <div class="feature-item">
+                    <a class="feature-item" href="#" id="feature-meal-planning">
                         <div class="feature-icon">
                             <i class="fas fa-calendar"></i>
                         </div>
                         <span class="feature-text">Meal Planning</span>
-                    </div>
-                    <div class="feature-item">
+                    </a>
+                    <a class="feature-item" href="#" id="feature-shopping-list">
                         <div class="feature-icon">
                             <i class="fas fa-bolt"></i>
                         </div>
                         <span class="feature-text">Shopping List</span>
-                    </div>
-                    <div class="feature-item">
+                    </a>
+                    <a class="feature-item" href="#" id="feature-recommendations">
                         <div class="feature-icon">
                             <i class="fas fa-heart"></i>
                         </div>
                         <span class="feature-text">Recommendations</span>
-                    </div>
-                    <div class="feature-item">
+                    </a>
+                    <a class="feature-item" href="explore-recipes.html">
                         <div class="feature-icon">
                             <i class="fas fa-chart-bar"></i>
                         </div>
                         <span class="feature-text">All Recipes</span>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
