--- a/frontend/cta.html
+++ b/frontend/cta.html
@@ -61,8 +61,8 @@
 		/* place the CTA card at the image's top-left on larger screens */
 		.cta-card { 
             position: absolute; 
-            top: 5rem; 
-            right: 10rem; 
+            bottom: 5rem; 
+            right: middle; 
             width: min(520px, 85%); 
         }
 
@@ -112,7 +112,7 @@
 		(function(){
 			const hero = document.querySelector('.cta-hero');
 			const card = document.querySelector('.cta-card');
-			const imgUrl = 'cta2.jpg';
+			const imgUrl = 'cta3.jpg';
 
 			function reveal() {
 				// slightly longer delay so background feels settled before card appears
