--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Bar Trigger -->
+    <div class="navbar-trigger"></div>
+    
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
@@ -100,7 +103,6 @@
                     <div class="card">
                         <div class="card-icon">
                             <i class="fas fa-search"></i>
-                            <i class="fas fa-utensils"></i>
                         </div>
                         <h3>1. Browse Recipes</h3>
                         <p>Explore our collection of heart-healthy recipes</p>
