--- a/netlify-deploy/daily-recommendations.html
+++ b/netlify-deploy/daily-recommendations.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation Bar Trigger -->
+    <div class="navbar-trigger"></div>
+    
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
