--- a/netlify-deploy/nutrition-dashboard.html
+++ b/netlify-deploy/nutrition-dashboard.html
@@ -8,6 +8,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Bar Trigger -->
+    <div class="navbar-trigger"></div>
+    
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
