--- a/netlify-deploy/meal-planning.html
+++ b/netlify-deploy/meal-planning.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planning - Silver Spoon Society</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar Trigger -->
@@ -23,7 +24,7 @@
                 </div>
             </div>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
+                <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
@@ -71,5 +72,7 @@
             <p class="page-subtitle">There is nothing here for now.</p>
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
