--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -8,6 +8,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Navigation Bar Trigger -->
+    <div class="navbar-trigger"></div>
+    
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
@@ -21,7 +24,7 @@
             </div>
             
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
+                <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
