--- a/netlify-deploy/nutrition-dashboard.html
+++ b/netlify-deploy/nutrition-dashboard.html
@@ -24,7 +24,7 @@
             </div>
             
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
+                <a href="home.html" class="nav-link">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
