change nutrition cards

--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -156,20 +156,20 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-bread-slice"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Fiber</h3>
+                                <h3>Carbohydrates</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="fiber-current">0</span>
+                            <span class="current-value" id="carbohydrates-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="fiber-goal">28</span>
+                            <span class="goal-value" id="carbohydrates-goal">130</span>
                             <span class="unit">g</span>
                         </div>
-                        <p class="card-description">Digestive health support</p>
+                        <p class="card-description">Energy from carbs</p>
                         <div class="card-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill" style="width: 27%"></div>
@@ -180,20 +180,20 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-bullseye"></i>
+                                <i class="fas fa-salt-shaker"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Water</h3>
+                                <h3>Sodium</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="water-current">0</span>
+                            <span class="current-value" id="sodium-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="water-goal">8</span>
-                            <span class="unit">glasses</span>
+                            <span class="goal-value" id="sodium-goal">2300</span>
+                            <span class="unit">mg</span>
                         </div>
-                        <p class="card-description">Hydration & body function</p>
+                        <p class="card-description">Sodium (recipe-sourced)</p>
                         <div class="card-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill" style="width: 25%"></div>
