add more nutrition info in dashboard

--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -180,7 +180,7 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-salt-shaker"></i>
+                                <i class="fa-solid fa-flask"></i>
                             </div>
                             <div class="card-title">
                                 <h3>Sodium</h3>
