add transparent animation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
 <body>
 	<main class="cta-hero" role="main">
 		<div class="cta-card" role="region" aria-labelledby="cta-heading">
-			<h1 id="cta-heading" class="cta-title">Welcome to Silver Spoon Society</h1>
+			<h1 class="shine-animate">Welcome to Silver Spoon Society</h1>
 			<p class="cta-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
 			<a href="home.html" class="cta-btn" aria-label="Get started">Get Started <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 		</div>
