--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,9 @@
 		<div class="cta-card" role="region" aria-labelledby="cta-heading">
 			<h1 class="shine-animate">Welcome to Silver Spoon Society</h1>
 			<p class="cta-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
-			<a href="home.html" class="cta-btn" aria-label="Get started">Get Started <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+			<a href="home.html" class="cta-btn btn-gradient" aria-label="Get started">
+				Get Started
+			</a>
 		</div>
 	</main>
 
