Added a "Sort By" dropdown with options

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -120,6 +120,21 @@
                         </div>
                     </div>
                     
+                    <div class="filter-group">
+                        <label for="sort-by">Sort By</label>
+                        <select id="sort-by" class="filter-select">
+                            <option value="default">Default</option>
+                            <option value="calories-high">Calories (High to Low)</option>
+                            <option value="calories-low">Calories (Low to High)</option>
+                            <option value="protein-high">Protein (High to Low)</option>
+                            <option value="protein-low">Protein (Low to High)</option>
+                            <option value="fat-high">Fat (High to Low)</option>
+                            <option value="fat-low">Fat (Low to High)</option>
+                            <option value="sodium-high">Sodium (High to Low)</option>
+                            <option value="sodium-low">Sodium (Low to High)</option>
+                        </select>
+                    </div>
+                    
                     <button class="btn btn-primary apply-filters-btn">
                         <i class="fas fa-filter"></i>
                         <span>Apply Filters</span>
