Add clear all button, fix the bugs of adding infinit recipe to dashboard, and now can auto-refresh nutrition data

--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -237,6 +237,9 @@
                             <div class="meals-added">
                                 <div class="meals-added-header">
                                     <i class="fas fa-calendar-check"></i> <strong>Today's Meals Added</strong>
+                                    <button id="clear-all-meals" class="clear-all-btn" title="Clear all meals" style="display:none;">
+                                        <i class="fas fa-trash"></i> Clear All
+                                    </button>
                                 </div>
                                 <ul class="meals-added-list" style="margin-top:12px;">
                                     <!-- JS rendered items -->
