small imporvements for responsive design issues

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -62,7 +62,7 @@
             </div>
             -->
             
-            <button class="mobile-menu-btn">
+            <button class="mobile-menu-btn" aria-label="Toggle mobile menu" aria-expanded="false">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
