--- a/netlify-deploy/daily-recommendations.html
+++ b/netlify-deploy/daily-recommendations.html
@@ -6,6 +6,7 @@
     <title>Daily Recommendations - Silver Spoon Society</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="password-protection.js"></script>
 </head>
 <body>
     <!-- Navigation Bar Trigger -->
