--- a/netlify-deploy/index.html
+++ b/netlify-deploy/index.html
@@ -1,84 +1,60 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Get Started - Silver Spoon Society</title>
+	<title>Silver Spoon Society - Healthy Living</title>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+	<script src="password-protection.js"></script>
 	<style>
-		/* Minimal CTA-specific styles to ensure hero displays nicely */
-		.cta-hero {
-			/* background-image is applied via JS after preload so we can reveal the card when the image is ready */
+		/* Single page scroll styles */
+		html {
+			scroll-behavior: smooth;
+		}
+		
+		/* Welcome page styles */
+		.welcome-section {
+			background-image: url('cta3.jpg');
+			background-size: cover;
+			background-position: center 40%;
 			min-height: 100vh;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			background-color: #f3f4f6; /* fallback while loading */
-			background-size: cover;
-			/* moved down to show more of the plate/person lower in the image */
-			background-position: center 40%;
 			text-align: center;
 			padding: 2rem;
 		}
-		.cta-card {
+		
+		.welcome-card {
 			background: rgba(255,255,255,0.95);
 			padding: 2rem 2.5rem;
 			border-radius: 12px;
 			max-width: 720px;
 			width: 100%;
 			box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-			/* start hidden and slide up when revealed */
 			opacity: 0;
 			transform: translateY(18px);
-			/* slower, smoother transition */
 			transition: opacity 900ms cubic-bezier(.2,.9,.3,1), transform 1000ms cubic-bezier(.2,.9,.3,1);
 		}
 
-		.cta-card.visible {
-			/* slightly reduced final opacity for softer presence */
+		.welcome-card.visible {
 			opacity: 1;
 			transform: translateY(0);
 		}
-		.cta-title {
+		
+		.welcome-title {
 			font-size: 2.25rem;
 			color: #2e7d32;
 			margin-bottom: 0.5rem;
 		}
-		.hero-wrapper { 
-            position: relative; 
-            max-width: 1200px; 
-            margin: 0 auto; 
-            height: 85vh;       
-            overflow: hidden;
-        }
-		.hero-img { 
-            width: 100%; 
-            height: auto; 
-            display: block; 
-            border-radius: 8px; 
-            transform: translateY(-8%);
-        }
-		/* place the CTA card at the image's top-left on larger screens */
-		.cta-card { 
-            position: absolute; 
-            bottom: 5rem; 
-            right: middle; 
-            width: min(520px, 85%); 
-        }
-
-		/* small screens: disable absolute positioning and center the card */
-		@media (max-width: 768px) {
-			.cta-card { 
-                position: static; 
-                margin: 1.25rem auto; 
-                width: calc(100% - 2.5rem); 
-            }
-		}
-		.cta-sub {
+		
+		.welcome-sub {
 			color: #444;
 			margin-bottom: 1.25rem;
 		}
-		.cta-btn {
+		
+		.welcome-btn {
 			display: inline-flex;
 			align-items: center;
 			gap: 0.6rem;
@@ -91,47 +67,272 @@
 			background: #4CAF50;
 			border: none;
 			cursor: pointer;
+			transition: all 0.3s ease;
 		}
-		@media (max-width: 480px) {
-			.cta-title { font-size: 1.6rem; }
-			.cta-card { padding: 1.25rem; }
+		
+		.welcome-btn:hover {
+			background: #45a049;
+			transform: translateY(-2px);
+			box-shadow: 0 5px 15px rgba(76, 175, 80, 0.3);
+		}
+		
+		/* Main page style adjustments */
+		.main-content {
+			margin-top: 0;
+		}
+		
+		/* Navbar fixed at top */
+		.navbar {
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			z-index: 1000;
+			transform: translateY(0);
+			transition: transform 0.3s ease;
+		}
+		
+		/* Hide navbar when scrolling */
+		.navbar.hidden {
+			transform: translateY(-100%);
+		}
+		
+		/* Smooth scroll to sections */
+		.scroll-to-section {
+			scroll-margin-top: 110px;
+		}
+		
+		/* Responsive design */
+		@media (max-width: 768px) {
+			.welcome-card { 
+				position: static; 
+				margin: 1.25rem auto; 
+				width: calc(100% - 2.5rem); 
+			}
+			
+			.welcome-title { 
+				font-size: 1.6rem; 
+			}
+			
+			.welcome-card { 
+				padding: 1.25rem; 
+			}
 		}
 	</style>
 </head>
 <body>
-	<main class="cta-hero" role="main">
-		<div class="cta-card" role="region" aria-labelledby="cta-heading">
-			<h1 id="cta-heading" class="cta-title">Welcome to Silver Spoon Society</h1>
-			<p class="cta-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
-			<a href="home.html" class="cta-btn" aria-label="Get started">Get Started <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+	<!-- Welcome Section -->
+	<section class="welcome-section" id="welcome">
+		<div class="welcome-card" role="region" aria-labelledby="welcome-heading">
+			<h1 class="welcome-title shine-animate">Welcome to Silver Spoon Society</h1>
+			<p class="welcome-sub">Designed for healthy eating, our recipes and nutrition tools are easy to use and suitable for long-term use.</p>
+			<a href="#home" class="welcome-btn" aria-label="Get Started">
+				<i class="fas fa-arrow-down"></i>
+				Get Started
+			</a>
 		</div>
+	</section>
+
+	<!-- Navigation Bar -->
+	<nav class="navbar">
+		<div class="nav-container">
+			<div class="nav-logo">
+				<div class="logo-icon">
+					<img src="logo.jpg" alt="Silver Spoon Society Logo" class="custom-logo">
+				</div>
+				<div class="logo-text">
+					<h1>Silver Spoon Society</h1>
+				</div>
+			</div>
+			
+			<div class="nav-links">
+				<a href="#welcome" class="nav-link">
+					<i class="fas fa-home"></i>
+					<span>Home</span>
+				</a>
+				<a href="explore-recipes.html" class="nav-link">
+					<i class="fas fa-search"></i>
+					<span>Explore Recipes</span>
+				</a>
+				<a href="daily-recommendations.html" class="nav-link">
+					<i class="fas fa-heart"></i>
+					<span>Daily Recommendations</span>
+				</a>
+				<a href="meal-planning.html" class="nav-link">
+					<i class="fas fa-calendar"></i>
+					<span>Meal Planning</span>
+				</a>
+				<a href="nutrition-dashboard.html" class="nav-link">
+					<i class="fas fa-chart-bar"></i>
+					<span>Nutrition Dashboard</span>
+				</a>
+				<a href="shopping-list.html" class="nav-link">
+					<i class="fas fa-shopping-cart"></i>
+					<span>Shopping List</span>
+				</a>
+			</div>
+			
+			<button class="mobile-menu-btn">
+				<i class="fas fa-bars"></i>
+			</button>
+		</div>
+	</nav>
+
+	<!-- Main Content Area -->
+	<main class="main-content">
+		<!-- Home Section -->
+		<section class="hero-section scroll-to-section" id="home">
+			<div class="hero-container">
+				<h1 class="hero-title">Silver Spoon Society</h1>
+				<p class="hero-subtitle">Nutrition made simple for healthy aging</p>
+				<div class="hero-buttons">
+					<a class="btn btn-primary" href="explore-recipes.html">
+						<i class="fas fa-heart"></i>
+						<span>Start Exploring Recipes</span>
+						<i class="fas fa-arrow-right"></i>
+					</a>
+					<a class="btn btn-secondary" href="nutrition-dashboard.html">
+						<i class="fas fa-chart-bar"></i>
+						<span>Track Your Nutrition</span>
+					</a>
+				</div>
+			</div>
+		</section>
+
+		<!-- How It Works Section -->
+		<section class="how-it-works scroll-to-section" id="how-it-works">
+			<div class="section-container">
+				<h2 class="section-title">How It Works</h2>
+				<div class="cards-container">
+					<div class="card">
+						<div class="card-icon">
+							<i class="fas fa-search"></i>
+						</div>
+						<h3>1. Browse Recipes</h3>
+						<p>Explore our collection of heart-healthy recipes</p>
+					</div>
+					<div class="card">
+						<div class="card-icon">
+							<i class="fas fa-heart"></i>
+						</div>
+						<h3>2. Save Favorites</h3>
+						<p>Like recipes you enjoy - they'll be saved in your favorites</p>
+					</div>
+					<div class="card">
+						<div class="card-icon">
+							<i class="fas fa-chart-bar"></i>
+						</div>
+						<h3>3. Track Nutrition</h3>
+						<p>Add meals to your dashboard to track daily nutrition intake</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Features Button Section -->
+		<section class="features-section scroll-to-section" id="features">
+			<div class="section-container">
+				<div class="features-container">
+					<a class="feature-item" href="meal-planning.html">
+						<div class="feature-icon">
+							<i class="fas fa-calendar"></i>
+						</div>
+						<span class="feature-text">Meal Planning</span>
+					</a>
+					<a class="feature-item" href="shopping-list.html">
+						<div class="feature-icon">
+							<i class="fas fa-bolt"></i>
+						</div>
+						<span class="feature-text">Shopping List</span>
+					</a>
+					<a class="feature-item" href="daily-recommendations.html">
+						<div class="feature-icon">
+							<i class="fas fa-heart"></i>
+						</div>
+						<span class="feature-text">Recommendations</span>
+					</a>
+					<a class="feature-item" href="explore-recipes.html">
+						<div class="feature-icon">
+							<i class="fas fa-chart-bar"></i>
+						</div>
+						<span class="feature-text">All Recipes</span>
+					</a>
+				</div>
+			</div>
+		</section>
 	</main>
 
-	<!-- Preload hero image, apply as background, then reveal CTA card -->
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="section-container">
+			<div class="footer-content">
+				<p class="footer-text">Supporting healthy eating habits for a better life</p>
+				<p class="footer-copyright">© 2024 Silver Spoon Society. Designed for senior wellness.</p>
+			</div>
+		</div>
+	</footer>
+
 	<script>
+		// Preload welcome page image and show card
 		(function(){
-			const hero = document.querySelector('.cta-hero');
-			const card = document.querySelector('.cta-card');
+			const welcomeCard = document.querySelector('.welcome-card');
 			const imgUrl = 'cta3.jpg';
 
 			function reveal() {
-				// slightly longer delay so background feels settled before card appears
-				requestAnimationFrame(() => setTimeout(() => card.classList.add('visible'), 180));
+				requestAnimationFrame(() => setTimeout(() => welcomeCard.classList.add('visible'), 180));
 			}
 
 			// Preload image
 			const img = new Image();
 			img.src = imgUrl;
 			img.onload = () => {
-				hero.style.backgroundImage = `url('${imgUrl}')`;
 				reveal();
 			};
 			img.onerror = () => {
-				// fallback: reveal card even if image fails
 				reveal();
 			};
 		})();
+
+		// Navbar hide/show on scroll
+		let lastScrollTop = 0;
+		const navbar = document.querySelector('.navbar');
+
+		window.addEventListener('scroll', function() {
+			const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+			
+			if (scrollTop > lastScrollTop && scrollTop > 100) {
+				// Scrolling down, hide navbar
+				navbar.classList.add('hidden');
+			} else {
+				// Scrolling up, show navbar
+				navbar.classList.remove('hidden');
+			}
+			
+			lastScrollTop = scrollTop;
+		});
+
+		// Mobile menu toggle
+		const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+		const navLinks = document.querySelector('.nav-links');
+
+		mobileMenuBtn.addEventListener('click', function() {
+			navLinks.classList.toggle('show');
+		});
+
+		// Smooth scroll to sections
+		document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+			anchor.addEventListener('click', function (e) {
+				e.preventDefault();
+				const target = document.querySelector(this.getAttribute('href'));
+				if (target) {
+					target.scrollIntoView({
+						behavior: 'smooth',
+						block: 'start'
+					});
+				}
+			});
+		});
 	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" crossorigin="anonymous"></script>
+	<script src="script.js"></script>
 </body>
 </html>
