--- a/netlify-deploy/nutrition-dashboard.html
+++ b/netlify-deploy/nutrition-dashboard.html
@@ -6,6 +6,7 @@
     <title>Silver Spoon Society - Nutrition Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="password-protection.js"></script>
 </head>
 <body>
     <!-- Navigation Bar Trigger -->
@@ -118,7 +119,7 @@
                         <div class="card-value">
                             <span class="current-value" id="calories-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="calories-goal">2000</span>
+                            <span class="goal-value" id="calories-goal">2200</span>
                             <span class="unit">kcal</span>
                         </div>
                         <p class="card-description">Energy for daily activities</p>
@@ -142,7 +143,7 @@
                         <div class="card-value">
                             <span class="current-value" id="protein-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="protein-goal">80</span>
+                            <span class="goal-value" id="protein-goal">56</span>
                             <span class="unit">g</span>
                         </div>
                         <p class="card-description">Muscle maintenance & repair</p>
@@ -156,20 +157,20 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-bread-slice"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Fiber</h3>
+                                <h3>Carbohydrates</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="fiber-current">0</span>
+                            <span class="current-value" id="carbohydrates-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="fiber-goal">30</span>
+                            <span class="goal-value" id="carbohydrates-goal">130</span>
                             <span class="unit">g</span>
                         </div>
-                        <p class="card-description">Digestive health support</p>
+                        <p class="card-description">Energy from carbs</p>
                         <div class="card-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill" style="width: 27%"></div>
@@ -180,20 +181,20 @@
                     <div class="nutrition-card">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-bullseye"></i>
+                                <i class="fa-solid fa-flask"></i>
                             </div>
                             <div class="card-title">
-                                <h3>Water</h3>
+                                <h3>Sodium</h3>
                                 <span class="status-tag low">low</span>
                             </div>
                         </div>
                         <div class="card-value">
-                            <span class="current-value" id="water-current">0</span>
+                            <span class="current-value" id="sodium-current">0</span>
                             <span class="separator">/</span>
-                            <span class="goal-value" id="water-goal">8</span>
-                            <span class="unit">glasses</span>
+                            <span class="goal-value" id="sodium-goal">2300</span>
+                            <span class="unit">mg</span>
                         </div>
-                        <p class="card-description">Hydration & body function</p>
+                        <p class="card-description">Sodium (recipe-sourced)</p>
                         <div class="card-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill" style="width: 25%"></div>
@@ -211,19 +212,38 @@
                     <div class="goals-header">
                         <h2><i class="fas fa-bullseye"></i> Today's Goals</h2>
                     </div>
-                    <div class="goals-list">
-                        <section>
-                            <div class="section-container">
-                                <div id="nutrition-results"></div>
-                                <div id="dashboard-nutrition"></div>
+
+                    <!-- Left: goals-list, Right: meals-added-section -->
+                    <div class="goals-row">
+                        <div class="goals-list">
+                            <section>
+                                <div class="section-container">
+                                    <div id="nutrition-results"></div>
+                                    <div id="dashboard-nutrition"></div>
+                                </div>
+                            </section>
+
+                            <div class="health-tip-container">
+                                <div class="health-tip-header">
+                                    <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
+                                </div>
+                                <div class="health-tip-content">
+                                    <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
+                                </div>
                             </div>
-                        </section>
-                <div class="health-tip-container">
-                    <div class="health-tip-header">
-                        <h2><i class="fas fa-heart"></i> Today's Health Tip</h2>
-                    </div>
-                    <div class="health-tip-content">
-                        <p><strong>Tracking Tip:</strong> Remember to log all your meals and snacks throughout the day. Even small items like a piece of fruit or handful of nuts contribute to your daily nutrition goals. Consistent logging helps you build healthier eating habits!</p>
+                        </div>
+
+                        <!-- Today's Meals Added -->
+                        <aside class="meals-added-section" aria-label="Today's Meals Added">
+                            <div class="meals-added">
+                                <div class="meals-added-header">
+                                    <i class="fas fa-calendar-check"></i> <strong>Today's Meals Added</strong>
+                                </div>
+                                <ul class="meals-added-list" style="margin-top:12px;">
+                                    <!-- JS rendered items -->
+                                </ul>
+                            </div>
+                        </aside>
                     </div>
                 </div>
             </div>
