--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,27 +152,38 @@
 				</a>
 				<a href="explore-recipes.html" class="nav-link">
 					<i class="fas fa-search"></i>
-					<span>Explore Recipes</span>
+					<span>Recipes</span>
+				</a>
+				<a href="nutrition-dashboard.html" class="nav-link">
+					<i class="fas fa-chart-line"></i>
+					<span>Dashboard</span>
 				</a>
 				<a href="daily-recommendations.html" class="nav-link">
 					<i class="fas fa-heart"></i>
-					<span>Daily Recommendations</span>
+					<span>Daily Tips</span>
 				</a>
 				<a href="meal-planning.html" class="nav-link">
-					<i class="fas fa-calendar"></i>
-					<span>Meal Planning</span>
-				</a>
-				<a href="nutrition-dashboard.html" class="nav-link">
-					<i class="fas fa-chart-bar"></i>
-					<span>Nutrition Dashboard</span>
+					<i class="fas fa-calendar-alt"></i>
+					<span>Planning</span>
 				</a>
 				<a href="shopping-list.html" class="nav-link">
 					<i class="fas fa-shopping-cart"></i>
-					<span>Shopping List</span>
+					<span>Shopping</span>
 				</a>
 			</div>
 			
-			<button class="mobile-menu-btn">
+			<!--
+			<div class="nav-right">
+				<button class="nav-icon-btn">
+					<i class="fas fa-globe"></i>
+				</button>
+				<button class="nav-icon-btn">
+					<i class="fas fa-ellipsis-v"></i>
+				</button>
+			</div>
+			-->
+			
+			<button class="mobile-menu-btn" aria-label="Toggle mobile menu" aria-expanded="false">
 				<i class="fas fa-bars"></i>
 			</button>
 		</div>
