add allergy filter

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -113,10 +113,25 @@
                                 <option value="all">All</option>
                                 <option value="vegetarian">Vegetarian</option>
                                 <option value="vegan">Vegan</option>
+                                <option value="low_sugar">Low-Sugar</option>
+                                <option value="low_sodium">Low-Sodium</option>
+                                <option value="heart_healthy">Heart-Healthy</option>
+                                <option value="diabetic_friendly">Diabetic-Friendly</option>
+                                <option value="soft_food">Soft Food</option>
+                            </select>
+                        </div>
+                        
+                        <div class="filter-group">
+                            <label for="allergy-filter">Allergy-Free</label>
+                            <select id="allergy-filter" class="filter-select">
+                                <option value="all">All</option>
                                 <option value="dairy_free">Dairy-Free</option>
                                 <option value="gluten_free">Gluten-Free</option>
                                 <option value="nut_free">Nut-Free</option>
-                                <option value="low_sugar">Low-Sugar</option>
+                                <option value="shellfish_free">Shellfish-Free</option>
+                                <option value="egg_free">Egg-Free</option>
+                                <option value="soy_free">Soy-Free</option>
+                                <option value="fish_free">Fish-Free</option>
                             </select>
                         </div>
                     </div>
