basic build of epic 3 and 4 with no recipe generated

--- a/frontend/daily-recommendations.html
+++ b/frontend/daily-recommendations.html
@@ -71,7 +71,7 @@
         <!-- Page Header -->
         <section class="page-header">
             <div class="section-container">
-                <h1 class="page-title">Daily Health Tips</h1>
+                <h1 class="page-title"><i class="fas fa-heart"></i> Daily Health Tips</h1>
                 <p class="page-subtitle">Personalized nutrition and wellness recommendations for healthy aging</p>
                 <p class="page-description">Get expert advice on maintaining optimal health through smart food choices and lifestyle habits</p>
             </div>
