--- a/frontend/nutrition-dashboard.html
+++ b/frontend/nutrition-dashboard.html
@@ -73,7 +73,7 @@
         <!-- Page Header -->
         <section class="page-header">
             <div class="section-container">
-                <h1 class="page-title">Nutrition Dashboard</h1>
+                <h1 class="page-title"><i class="fas fa-chart-line"></i> Nutrition Dashboard</h1>
                 <p class="page-subtitle">Track your daily nutrition intake and monitor your health goals</p>
                 <p class="page-description">Track your daily nutrition goals at a glance</p>
             </div>
