--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -74,7 +74,7 @@
         <!-- Page Header -->
         <section class="page-header">
             <div class="section-container">
-                <h1 class="page-title">Explore Healthy Recipes</h1>
+                <h1 class="page-title"><i class="fas fa-search"></i> Explore Healthy Recipes</h1>
                 <p class="page-subtitle">Discover nutritious meals designed specifically for your health needs and preferences</p>
             </div>
         </section>
