--- a/frontend/meal-planning.html
+++ b/frontend/meal-planning.html
@@ -68,12 +68,100 @@
         </div>
     </nav>
     <main class="main-content">
+        <!-- Page Header -->
         <section class="page-header">
-            <h1 class="page-title">Meal Planning</h1>
-            <p class="page-subtitle">There is nothing here for now.</p>
+            <div class="section-container">
+                <h1 class="page-title"><i class="fas fa-calendar-week"></i> Weekly Meal Plan</h1>
+                <p class="page-subtitle">Get personalized meal recommendations based on your preferences and dietary needs</p>
+            </div>
         </section>
+
+        <!-- Loading Spinner -->
+        <div id="loading-spinner" class="loading-spinner hidden">
+            <div class="spinner"></div>
+            <p>Creating your personalized weekly meal plan...</p>
+        </div>
+
+        <!-- User Preferences Questionnaire -->
+        <div id="questionnaire-container" class="questionnaire-container">
+            <!-- Step Indicator -->
+            <div class="step-indicator">
+                <div class="step active" data-step="1">1</div>
+                <div class="step" data-step="2">2</div>
+                <div class="step" data-step="3">3</div>
+                <div class="step" data-step="4">4</div>
+            </div>
+
+            <!-- Questionnaire Content -->
+            <div id="questionnaire-content">
+                <!-- This will be populated by JavaScript -->
+            </div>
+
+            <!-- Button Group -->
+            <div class="button-group">
+                <button id="btn-back" class="btn btn-secondary" onclick="goToPreviousStep()" disabled>
+                    <i class="fas fa-arrow-left"></i> Back
+                </button>
+                <button id="btn-next" class="btn btn-primary" onclick="goToNextStep()">
+                    Next <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- Weekly Plan Display -->
+        <div id="weekly-plan-display" class="weekly-plan-display">
+            <!-- Plan Header -->
+            <div class="plan-header-modern">
+                <div class="plan-title-section">
+                    <h2><i class="fas fa-calendar-check"></i> Your Weekly Meal Plan</h2>
+                    <p class="plan-subtitle">Personalized nutrition for healthy aging</p>
+                </div>
+                <div class="plan-actions-header">
+                    <button class="btn-icon" onclick="regeneratePlan()" title="Generate New Plan">
+                        <i class="fas fa-refresh"></i>
+                    </button>
+                    <button class="btn-icon" onclick="updatePreferences()" title="Update Preferences">
+                        <i class="fas fa-cog"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Plan Info Bar -->
+            <div class="plan-info-bar">
+                <div class="info-item">
+                    <i class="fas fa-user-circle"></i>
+                    <span id="plan-user-info">Loading...</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span id="plan-date-range">This Week</span>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Allergy Safe</span>
+                </div>
+            </div>
+
+            <!-- Weekly Meal Plan Days -->
+            <div id="weekly-days-container" class="weekly-days-container">
+                <!-- This will be populated by JavaScript -->
+            </div>
+
+            <!-- Quick Actions -->
+            <div class="quick-actions">
+                <button class="btn btn-primary btn-large" onclick="generateShoppingList()">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span>Generate Shopping List</span>
+                </button>
+                <button class="btn btn-outline btn-large" onclick="printMealPlan()">
+                    <i class="fas fa-print"></i>
+                    <span>Print Plan</span>
+                </button>
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
+    <script src="meal-planning.js"></script>
 </body>
 </html>
