--- a/frontend/shopping-list.html
+++ b/frontend/shopping-list.html
@@ -68,12 +68,142 @@
         </div>
     </nav>
     <main class="main-content">
+        <!-- Page Header -->
         <section class="page-header">
-            <h1 class="page-title">Shopping List</h1>
-            <p class="page-subtitle">There is nothing here for now.</p>
+            <div class="section-container">
+                <h1 class="page-title"><i class="fas fa-shopping-cart"></i> Smart Shopping List</h1>
+                <p class="page-subtitle">Organized ingredients from your meal plans and custom items</p>
+            </div>
+        </section>
+
+        <!-- Shopping List Controls -->
+        <section class="shopping-controls">
+            <div class="section-container">
+                <div class="controls-bar">
+                    <div class="source-selector">
+                        <label for="list-source">Generate from:</label>
+                        <select id="list-source" class="form-select">
+                            <option value="meal-plan">Current Meal Plan</option>
+                            <option value="custom">Custom List</option>
+                            <option value="both">Meal Plan + Custom</option>
+                        </select>
+                        <button id="generate-btn" class="btn btn-primary">
+                            <i class="fas fa-magic"></i> Generate List
+                        </button>
+                    </div>
+                    <div class="list-actions">
+                        <button id="clear-completed-btn" class="btn btn-secondary">
+                            <i class="fas fa-broom"></i> Clear Completed
+                        </button>
+                        <button id="print-list-btn" class="btn btn-outline">
+                            <i class="fas fa-print"></i> Print List
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Add Custom Item -->
+        <section class="add-item-section">
+            <div class="section-container">
+                <div class="add-item-card">
+                    <div class="add-item-header">
+                        <h3><i class="fas fa-plus-circle"></i> Add Custom Item</h3>
+                    </div>
+                    <div class="add-item-form">
+                        <input type="text" id="custom-item-input" placeholder="Enter item name (e.g., Fresh tomatoes, Whole wheat bread)" class="form-input">
+                        <select id="custom-category" class="form-select">
+                            <option value="produce">🥕 Produce</option>
+                            <option value="dairy">🥛 Dairy & Eggs</option>
+                            <option value="meat">🥩 Meat & Seafood</option>
+                            <option value="pantry">🥫 Pantry Items</option>
+                            <option value="frozen">🧊 Frozen Foods</option>
+                            <option value="bakery">🍞 Bakery</option>
+                            <option value="other">📦 Other</option>
+                        </select>
+                        <button id="add-item-btn" class="btn btn-primary">
+                            <i class="fas fa-plus"></i> Add Item
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Shopping List Display -->
+        <section class="shopping-list-section">
+            <div class="section-container">
+                <!-- List Summary -->
+                <div class="list-summary">
+                    <div class="summary-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" id="total-items">0</span>
+                            <span class="stat-label">Total Items</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" id="completed-items">0</span>
+                            <span class="stat-label">Completed</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number" id="remaining-items">0</span>
+                            <span class="stat-label">Remaining</span>
+                        </div>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" id="shopping-progress"></div>
+                        </div>
+                        <span class="progress-text" id="progress-percentage">0% Complete</span>
+                    </div>
+                </div>
+
+                <!-- Shopping Categories -->
+                <div id="shopping-categories" class="shopping-categories">
+                    <!-- Categories will be populated by JavaScript -->
+                </div>
+
+                <!-- Empty State -->
+                <div id="empty-state" class="empty-state">
+                    <div class="empty-icon">
+                        <i class="fas fa-shopping-basket"></i>
+                    </div>
+                    <h3>Your shopping list is empty</h3>
+                    <p>Generate a list from your meal plan or add custom items to get started.</p>
+                    <button class="btn btn-primary" onclick="document.getElementById('generate-btn').click()">
+                        <i class="fas fa-magic"></i> Generate from Meal Plan
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Shopping Tips -->
+        <section class="shopping-tips">
+            <div class="section-container">
+                <div class="tips-card">
+                    <h3><i class="fas fa-lightbulb"></i> Smart Shopping Tips</h3>
+                    <div class="tips-grid">
+                        <div class="tip-item">
+                            <i class="fas fa-route"></i>
+                            <span>Shop by category to save time - start with produce, then move to dairy</span>
+                        </div>
+                        <div class="tip-item">
+                            <i class="fas fa-clock"></i>
+                            <span>Best shopping times: Early morning or late evening to avoid crowds</span>
+                        </div>
+                        <div class="tip-item">
+                            <i class="fas fa-tag"></i>
+                            <span>Check store apps for digital coupons before you shop</span>
+                        </div>
+                        <div class="tip-item">
+                            <i class="fas fa-leaf"></i>
+                            <span>Choose fresh, seasonal produce for better nutrition and value</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
     <script src="script.js"></script>
+    <script src="shopping-list.js"></script>
 </body>
 </html>
