feat: Add beverage option to recipe categories and update meal planning logic
- Added "Beverage" option to the recipe category dropdown in explore-recipes.html.
- Updated meal planning questionnaire to include beverage options and adjusted calorie target labels for clarity.
- Expanded meal plan generation to cover a full week instead of just three days.
- Removed snack-specific filtering logic from recipe fetching to streamline recipe selection.
- Enhanced recipe modal functionality, including improved button text updates for adding recipes to the dashboard.
- Refactored dashboard rendering logic to improve clarity and maintainability.
- Adjusted CSS styles for filter options to improve responsiveness across different screen sizes.

--- a/frontend/explore-recipes.html
+++ b/frontend/explore-recipes.html
@@ -104,6 +104,7 @@
                                 <option value="soup">Soup</option>
                                 <option value="salad">Salad</option>
                                 <option value="snack">Snack</option>
+                                <option value="beverage">Beverage</option>
                             </select>
                         </div>
                         
